@@ -4,6 +4,9 @@
       in the jre option to set the endorsed dirs. This will allow jsXe to be
       launched from anywhere and still be able to find the right version of
       Xerces.
+    * Updated the installer to create a script file in unix that uses the java
+      in the environment path and use the HotSpot server so that jsXe runs
+      faster at the cost of startup time and memory footprint.
 
 08/21/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
